feat: Spring boot 4.1 & java 25 upgrade